ff fix hide scrollbar when tray is closed

--- a/src/app/frontend/assets/styles/modules/m-tray-area.scss
+++ b/src/app/frontend/assets/styles/modules/m-tray-area.scss
@@ -54,6 +54,10 @@
   }
 }
 
+.tray-is-closed .m-tray-area .window {
+  overflow:hidden;
+}
+
 .m-tray-area .open-close {
   position: absolute;
   top: 50%;
